--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "cspell": "^6.0.0",
     "eslint": "^8.16.0",
     "husky": "^8.0.1",
+    "mitt": "^3.0.0",
     "prettier": "^2.6.2",
-		"tsup": "^6.0.1",
+    "tsup": "^6.0.1",
     "typescript": "^4.7.2",
     "vitest": "^0.13.0"
   },
   "license": "MIT",
-    "repository": {
+  "repository": {
     "type": "git",
     "url": "git://github.com/tachibana-shin/message-port-api.git"
   },
@@ -53,7 +54,7 @@
     "tachibana-shin"
   ],
   "files": [
-    "dist" 
+    "dist"
   ],
   "husky": {
     "hooks": {
