--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "message-port-api",
   "version": "0.0.2",
-  "description": "a repository npm package",
+  "description": "A simple package that allows you to simplify the use of `MessagePort API` more easily (Worker, IFrame...)",
   "scripts": {
     "format": "prettier -w src",
     "build": "tsup",
